[gd_scene load_steps=2 format=2]

[ext_resource path="res://b2g_tools/B2G_HUD.gd" type="Script" id=1]

[node name="B2G_HUD" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
script = ExtResource( 1 )

[node name="Label1" type="Label" parent="."]
margin_right = 40.0
margin_bottom = 14.0
text = "NW"

[node name="Label4" type="Label" parent="."]
anchor_top = 1.0
anchor_bottom = 1.0
margin_top = -14.0
margin_right = 40.0
text = "SW"
valign = 2

[node name="Label2" type="Label" parent="."]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -40.0
margin_bottom = 14.0
text = "NE"
align = 2

[node name="Label3" type="Label" parent="."]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -40.0
margin_top = -14.0
text = "SE"
align = 2
valign = 2

[node name="HudMessageLabel" type="Label" parent="."]
anchor_right = 1.0
margin_bottom = 180.0
align = 1

[node name="b2g_hud_Timer" type="Timer" parent="."]

[connection signal="timeout" from="b2g_hud_Timer" to="." method="_on_b2g_hud_Timer_timeout"]
